# claude-code-studio

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  ccdeck.code-workspace  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  project_profile.yaml
.claude/: settings.json  system_prompt_append.md
.claude/agents/: doc-maintainer.md  memory-organizer.md  quality-fix.md
.claude/memory/: MEMORY.md
.claude/skills/: cut-release  prompt-import  skill-sync
.claude/skills/caveman/: SKILL.md
.claude/skills/claude-settings/: SKILL.md
.claude/skills/claude-workspace/: SKILL.md  work_artifacts.py
.claude/work/: get_context_prompt-simplify-store.md  get_context_prompt-skill-build.md  get_context_prompt_library_frontend_lane.md  get_context_v014-phase3-and-sweep.md  prompt_library_frontend_plan.md  prompt_library_simplification_plan.md  prompt_library_ux_round2_plan.md  v0.14_core_refocus_plan.md
.claude/work/plans/: settings_search_edit_handoff.md
.claude/work/prompt_report/: prompt_compose_phase3_prompt.md  prompt_compose_phase3_report.md  quality_fix_wave_prompt.md  quality_fix_wave_report.md  quality_scan_ccdeck-core_report.md  quality_scan_ccdeck-rust_report.md  quality_scan_ccdeck-ui_report.md  quality_scan_prompt-compose_report.md  quality_scan_wave_prompt.md  release_fixes_prompt.md  release_fixes_report.md  settings_search_edit_audit_prompt.md  settings_search_edit_audit_report.md  settings_search_edit_prompt.md  settings_search_edit_report.md
.claude/work/subagent_docs/: prompt_library_backend_prompt.md  prompt_library_frontend_prompt.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: roadmap.md  search-design.md
e2e/: browse.spec.ts  delete-editing.spec.ts  fork.spec.ts
project_docs/: agentic_harness.md  multi_agent_bindings.md  prompt-library-design.md  prompts-design.md  prompts-ux.md  roadmap.md  search-design.md
project_docs/skills/cut-release/: SKILL.md
project_docs/skills/prompt-import/: SKILL.md  validate_prompts.py
project_docs/skills/skill-sync/: SKILL.md  skill_sync.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: appconfig.rs  datadir.rs  lib.rs  prompts.rs  search.rs  settings.rs
src-tauri/src/prompts/: appstate.rs  embed.rs  grammar.rs  lexical.rs  projects.rs  state.rs  store.rs
src-tauri/src/search/: db.rs  extract.rs  index.rs  query.rs  state.rs
src/lib/: api.ts  browseLoad.ts  diff.ts  displayModel.ts  editDraft.ts  parser.ts  prompts.svelte.ts  resume.ts  search.svelte.ts  sessionOps.ts  toolIntent.ts  types.ts  updater.svelte.ts
src/lib/attachments/: focusTrap.ts  portal.ts
src/lib/components/: AppConfigView.svelte  Block.svelte  BrowseView.svelte  CopyContextMenu.svelte  DiffView.svelte  InlineSearchPanel.svelte  MessageCell.svelte  PromptsView.svelte  RawJsonModal.svelte  ResumeMenu.svelte  SaveRail.svelte  SearchView.svelte  SessionEditor.svelte  SessionMetaCard.svelte  SettingsSearchView.svelte  SettingsView.svelte  ToolGroup.svelte  TurnDivider.svelte
src/lib/components/prompts/: ComposeBox.svelte  ConfigPopover.svelte  EmbeddingsPanel.svelte  EmbeddingsPopover.svelte  EmbeddingsSection.svelte  MatchPanel.svelte  NoticesSection.svelte  PieceModal.svelte  PlaceholderPopover.svelte  Popover.svelte  ProjectManagerPopover.svelte  ProjectTabs.svelte  SaveAsControl.svelte  ShortcutsSection.svelte  SnippetModal.svelte  VariableFillList.svelte
src/lib/compose/: doc.ts  placeholders.ts  variables.ts
src/lib/prompts/: hotkeys.ts  notices.ts  palette.ts  toasts.svelte.ts  types.ts
src/routes/: +page.svelte
tests/: browse_load_smoke.mjs  diff_group_smoke.mjs  edit_roundtrip_smoke.mjs  edit_smoke.mjs  group_smoke.mjs  hotkeys_smoke.mjs  notices_smoke.mjs  prompts_smoke.mjs  resume_smoke.mjs  smoke.mjs  title_smoke.mjs
