[package]
name = "ccstudio"
version = "0.7.0"
description = "Offline desktop viewer and editor for Claude Code chat history"
authors = ["zhangxingeng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ccstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
# Search: SQLite-backed extracted-text cache. "bundled" compiles SQLite from
# source into the binary (no system dependency). Plain tables, not FTS5.
rusqlite = { version = "0.40", features = ["bundled"] }
# ISO-8601 timestamp -> epoch-ms parsing for date filtering. No "clock" feature
# (we only parse strings, never read the wall clock), which drops the libc dep.
chrono = { version = "0.4", default-features = false, features = ["std", "alloc"] }
# Parallel parse fan-out for the indexer (parse in parallel, write serialized).
rayon = "1"
# The matcher. Same SIMD literal-prefiltering that makes ripgrep fast — this is
# what makes the "scan text, no tokenizer" approach viable.
regex = "1"
# Session-fork ids for "resume from here" (v4, randomly generated).
uuid = { version = "1", features = ["v4"] }
