[package]
name = "ccstudio"
version = "0.11.0"
description = "Offline desktop viewer and editor for Claude Code chat history"
authors = ["zhangxingeng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ccstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
# Search: SQLite-backed extracted-text cache. "bundled" compiles SQLite from
# source into the binary (no system dependency). Plain tables, not FTS5.
rusqlite = { version = "0.40", features = ["bundled"] }
# ISO-8601 timestamp -> epoch-ms parsing for date filtering. No "clock" feature
# (we only parse strings, never read the wall clock), which drops the libc dep.
chrono = { version = "0.4", default-features = false, features = ["std", "alloc"] }
# Parallel parse fan-out for the indexer (parse in parallel, write serialized).
rayon = "1"
# The matcher: an embedded full-text index (BM25 ranking + fuzzy/typo-tolerant
# term matching) — replaces the old regex-crate substring/regex scan (issue #5:
# fuzzy/intent search over exact-match precision tooling).
tantivy = "0.26"
# Session-fork ids for "resume from here" (v4, randomly generated).
uuid = { version = "1", features = ["v4"] }
# Provider-profile API keys (issue #21) in the OS keychain: macOS Keychain,
# Windows Credential Manager, Linux Secret Service (zbus). keyring v4's DEFAULT
# features already select a real native backend per OS — verified against the
# 4.1.4 source: `default = ["v1"]`, and `v1` enables apple/windows/zbus stores.
# (This is NOT the v2/v3 hazard where zero backend features silently compiled a
# no-op mock; v4 splits stores into separate crates wired up by `v1`.) So no
# extra feature list is needed here — a plain dependency is correct.
keyring = "4"
# Prompt Library semantic match (issue #24): ONNX text embeddings, opt-in.
# default-features OFF is load-bearing: the defaults statically link a ~15-30MB
# ONNX Runtime into every shipped binary. `ort-load-dynamic` instead loads
# libonnxruntime at runtime from a file we download (pinned version + sha256)
# only when the user clicks Download — non-opted users pay ~3-6MB of glue, not
# the runtime. No hf-hub/image features: model files are fetched by our own
# pinned-URL downloader, so their HTTP stacks would be dead weight.
fastembed = { version = "5", default-features = false, features = ["ort-load-dynamic"] }
# Direct dep only for `ort::init_from(<lib path>)` (fastembed doesn't
# re-export it). Same exact pin as fastembed's own requirement, so cargo
# unifies them into one crate; features are additive with fastembed's.
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic"] }
# Downloader for the opt-in model + ONNX Runtime artifacts (embed_download).
ureq = "3"
# sha256 verification of every downloaded artifact BEFORE it is used or loaded
# — the runtime dylib especially is native code; a checksum mismatch deletes
# the file and reports error state, never loads.
sha2 = "0.10"
# Unpack the official Microsoft onnxruntime release archives (.tgz) to extract
# just the shared library.
flate2 = "1"
tar = "0.4"

# Windows ships onnxruntime as a .zip instead of a .tgz.
[target.'cfg(windows)'.dependencies]
zip = { version = "5", default-features = false, features = ["deflate"] }
